[gd_scene load_steps=13 format=3 uid="uid://bhear5ekciqs4"]

[ext_resource type="Texture2D" uid="uid://bk5mxlfef8r1i" path="res://Assets/ninePatch/SimpleDialogIConFondo.png" id="1_pf41u"]
[ext_resource type="Script" path="res://Scenes/Dialog/dialog_box.gd" id="2_15nn5"]
[ext_resource type="Theme" uid="uid://cmxlcofgxca0j" path="res://Assets/theme.tres" id="2_wbncm"]
[ext_resource type="FontFile" uid="uid://b8laju8kqckyt" path="res://Assets/Font/dogicabold.ttf" id="3_i2ll0"]
[ext_resource type="Texture2D" uid="uid://lpvp7v4lm286" path="res://Assets/contnueDialog.png" id="3_ne7v1"]
[ext_resource type="Shader" path="res://Assets/Shader/outline.gdshader" id="4_4yste"]
[ext_resource type="Texture2D" uid="uid://clbpblw75flhc" path="res://Assets/Portraits/Francisco.png" id="6_m5p3c"]
[ext_resource type="AudioStream" uid="uid://d1xjvvysc64to" path="res://Assets/SFX/speak.wav" id="8_r5b31"]

[sub_resource type="Animation" id="Animation_bfed7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6huve"]
resource_name = "blink"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ry34n"]
_data = {
"RESET": SubResource("Animation_bfed7"),
"blink": SubResource("Animation_6huve")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x13vw"]
shader = ExtResource("4_4yste")
shader_parameter/width = 1
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/flickering_speed = 1.0
shader_parameter/minimal_flickering_alpha = 0.0

[node name="DialogBox" type="NinePatchRect"]
top_level = true
z_index = 10
custom_minimum_size = Vector2(812, 256)
anchors_preset = -1
anchor_right = 0.701
anchor_bottom = 0.395
offset_right = 4.44794
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pf41u")
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 6
script = ExtResource("2_15nn5")

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -42.0
offset_right = 21.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.655, 0.4)
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("3_ne7v1")
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect2"]
root_node = NodePath("../../TextureRect")
libraries = {
"": SubResource("AnimationLibrary_ry34n")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_wbncm")
theme_override_constants/separation = 45

[node name="Nombre" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_wbncm")
theme_override_fonts/font = ExtResource("3_i2ll0")
theme_override_font_sizes/font_size = 31
text = "Frank"

[node name="Texto" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam volutpat libero consectetur lacus suscipit, ut fringilla tellus aliquet. Sed ac est vel erat mollis pharetra."
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("3_ne7v1")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_x13vw")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -271.0
offset_top = -302.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_m5p3c")
flip_h = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_r5b31")
volume_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
